--- a/css/index.css
+++ b/css/index.css
@@ -129,4 +129,16 @@ footer {
 	text-align: center;
 }
 
+.space {
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    
+}
 
