--- a/css/index.css
+++ b/css/index.css
@@ -142,3 +142,39 @@ a {
     
 }
 
+
+
+
+
+
+
+
+
+@media (max-width:800px) {
+    .navigation {
+        display: block;
+        background-color:red;
+    }
+
+    @media (max-width:800px) {
+    }
+    #startbutton{
+        background: blue;
+        margin: 0px 0px 0px 299px;
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+    }
+
+    @media (max-width:800px) {
+    }
+    .side-side{
+        background: yellow;
+        border-top: 2px black solid;
+        padding-top: 20px;
+        border-bottom: 2px black solid;
+        padding-bottom: 10px;
+
+    }
