--- a/css/index.css
+++ b/css/index.css
@@ -163,12 +163,10 @@ a {
     @media (max-width:800px) {
     }
     #startbutton{
-        background: blue;
-        margin: 0px 0px 0px 310px;
-        width: 50%;
+        
+        margin: 300px 0px 0px 310px;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        align-items: flex-end;
 
     }
 
@@ -181,6 +179,9 @@ a {
         padding-top: 20px;
         border-bottom: 2px black solid;
         padding-bottom: 10px;
+        width: 86%;
+        display: flex;
+        align-items: center;
 
     }
 
@@ -210,8 +211,37 @@ a {
         display: flex;
         margin: 0 auto;
         padding-top: 10px;
+        padding-bottom: 20px;
 
 
     }
     
+    @media (max-width:800px) {
+    }
+    .header1 {
+        display: flex;
+        flex-direction: center;
+        padding-bottom: 0px;
+        
+        
+        
+        
+        
+        
+    }
+
+    @media (max-width:800px) {
+    }
+    .middle-img {
+        width: 89%;
+        
+    }
+        
+        
+        
+        
+        
+    }
+   
+   
    
