--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,9 @@ a {
     
 }
 
-
+.innovation {
+    text-align: center;
+}
 
 
 
@@ -156,6 +158,7 @@ a {
         flex-direction: column-reverse;
         
         
+        
       
 
     }
@@ -166,15 +169,17 @@ a {
     }
     .side-side{
         
-        border-top: 2px black solid;
+        
         padding-top: 20px;
         border-bottom: 2px black solid;
         padding-bottom: 10px;
         width: 86%;
         display: flex;
         align-items: center;
+        padding-left: 50px;
 
     }
+
 
 
     @media (max-width:800px) {
@@ -192,7 +197,8 @@ a {
         width: 85%;
         justify-content: space-between;
         padding-left: 40px;
-
+        
+    
 
     }
 
@@ -214,7 +220,8 @@ a {
     @media (max-width:800px) {
     }
     .middle-img {
-        width: 89%;
+        width: 85%;
+        padding-left: 50px;
         
     }
         
@@ -253,3 +260,21 @@ a {
         
     
 }
+
+@media (max-width:800px) {
+}
+html {
+    margin: 0 auto;
+	width: 800px;
+}
+
+@media (max-width:800px) {
+}
+.contactadress {
+    padding-left: 50px;
+}
+
+
+
+
+
