--- a/css/index.css
+++ b/css/index.css
@@ -52,12 +52,14 @@ h1 {
 }
 
 #startbutton {
-	margin: 10px;
+	margin:10px;
 	color: black;
 	border: 1px solid black;
 	display: inline;
 	text-align: center;
-	padding: 10px;
+    padding: 10px;
+    
+
 
 
 }
@@ -84,7 +86,10 @@ border: 10px;
 }
 
 .top-image {
-	width: 40%;
+    width: 40%;
+    padding-bottom: 100px;
+    border-bottom: 1px black solid;
+    background: yellow;
 
 	
 
@@ -115,13 +120,17 @@ header {
 
 }
 .header1 {
-	width: 40%;
+    width: 40%;
+    padding-bottom: 100px;
+    background: yellow;
+    border-bottom: 1px black solid;
 }
 
 .navigation {
 	display: flex;
 	justify-content: space-between;
-	margin: 20px 0 35px 0;
+    margin: 20px 0 35px 0;
+    
 	
 }
 footer {
@@ -152,10 +161,12 @@ a {
 
 
 
+
 @media (max-width:800px) {
     .navigation {
         display: flex;
         flex-direction: column-reverse;
+        
         
         
         
@@ -166,7 +177,7 @@ a {
 
 
     @media (max-width:800px) {
-    }
+    
     .side-side{
         
         
@@ -177,13 +188,14 @@ a {
         display: flex;
         align-items: center;
         padding-left: 50px;
+        border-top: 2px black solid;
 
     }
 
 
 
     @media (max-width:800px) {
-    }
+    
     .hide {
         display: none;
 
@@ -274,7 +286,18 @@ html {
     padding-left: 50px;
 }
 
+@media (max-width:800px) {
 
+.side-side {
+    border-top: 2px black solid;
+}
+
+
+
+@media (max-width:500px) {
+    .side-side {
+        background: red;
+}
 
 
 
