--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,9 @@ border: 10px;
 
 .side-side {
 	display: flex;
-	margin: 10px;
+    margin: 10px;
+   
+    
 
 }
 
@@ -88,8 +90,7 @@ border: 10px;
 .top-image {
     width: 40%;
     padding-bottom: 100px;
-    border-bottom: 1px black solid;
-    background: yellow;
+
 
 	
 
@@ -104,7 +105,8 @@ border: 10px;
 }
 
 .head-section {
-	text-align: center;
+    text-align: center;
+    border-bottom: 2px black solid;
 }
 
 nav {
@@ -122,8 +124,8 @@ header {
 .header1 {
     width: 40%;
     padding-bottom: 100px;
-    background: yellow;
-    border-bottom: 1px black solid;
+    
+    
 }
 
 .navigation {
@@ -155,6 +157,9 @@ a {
     text-align: center;
 }
 
+.contactadress {
+    border-top: 2px black solid;
+}
 
 
 
