put styles under same media

--- a/css/index.css
+++ b/css/index.css
@@ -157,9 +157,11 @@ footer {
     border-top: 2px black solid;
 }
 
-
-
-
+a {
+    text-decoration: none;
+    color: black;
+    
+}
 
 
 
@@ -167,98 +169,102 @@ footer {
     .navigation {
         display: flex;
         flex-direction: column-reverse;
-        
-        
-        
-        
-      
+         }
 
-    }
+         .side-side{
+        
+        
+            padding-top: 20px;
+            padding-bottom: 10px;
+            width: 86%;
+            display: flex;
+            align-items: center;
+            padding-left: 50px;
+            
+        }
+
+        .hide {
+            display: none;
+        }
+
+        .space {
+            display: flex;
+            justify-content: center;
+            width: 85%;
+            justify-content: space-between;
+            padding-left: 40px;
+            
+        
+    
+        }
+
+        .logo {
+            display: flex;
+            margin: 0 auto;
+            padding-top: 10px;
+            padding-bottom: 20px;
+    
+    
+        }
+
+        .middle-img {
+            width: 85%;
+            padding-left: 50px;
+            
+        }
+
+        .head-section {
+        
+            display:flex;
+            align-items:center;
+            flex-direction:column;
+            height:400px;
+            
+            
+        }
+        #startbutton{
+            padding-top: 10px;
+            padding-right: 40px;
+            padding-left:40px;
+        }
+
+
+        html {
+            margin: 0 auto;
+            width: 800px;
+        }
+
+        .contactadress {
+            padding-left: 50px;
+        }
+
+        .container {
+            width: 100%;
+        }
+
 }
 
 
 
-    @media (max-width:800px) {
     
-    .side-side{
-        
-        
-        padding-top: 20px;
-        
-        padding-bottom: 10px;
-        width: 86%;
-        display: flex;
-        align-items: center;
-        padding-left: 50px;
-        
-    }
-}
-
-
-
-    @media (max-width:800px) {
-    
-    .hide {
-        display: none;
-
-    
-}
-
-    @media (max-width:800px) {
-    
-    .space {
-        display: flex;
-        justify-content: center;
-        width: 85%;
-        justify-content: space-between;
-        padding-left: 40px;
-        
     
 
-    }
-}
-
-    @media (max-width:800px) {
-    
-    .logo {
-        display: flex;
-        margin: 0 auto;
-        padding-top: 10px;
-        padding-bottom: 20px;
 
 
-    }
-}
-    
+
+  
+
+
+  
+
    
         
 
 
-    @media (max-width:800px) {
-    
-    .middle-img {
-        width: 85%;
-        padding-left: 50px;
-        
-    }
-}
+      
         
         
-        
-    @media (max-width:800px) {
-    
-    .head-section {
-        
-        display:flex;
-        align-items:center;
-        flex-direction:column;
-        height:400px;
-        
-        
-
-        
-    }
-}
+  
         
     .innovation {
         
@@ -267,50 +273,19 @@ footer {
 
 
         
-    @media (max-width:800px) {
+
     
-    #startbutton{
-        padding-top: 10px;
-        padding-right: 40px;
-        padding-left:40px;
+
+
+@media (max-width:500px) {
+    .container {
+       width: 100%;
+    }
+    html {
+        background: red;
     }
 }
-    
-    
-        
-    
-}
 
-@media (max-width:800px) {
-
-html {
-    margin: 0 auto;
-	width: 800px;
-}
-}
-
-@media (max-width:800px) {
-
-.contactadress {
-    padding-left: 50px;
-}
-}
-
-
-
-a {
-    text-decoration: none;
-    color: black;
-    
-}
-
-@media  (max-width: 500px) {
-    .navigation {
-        color: red;
-        
-    }
-
-}
 
 
 
