--- a/css/index.css
+++ b/css/index.css
@@ -315,10 +315,19 @@ a {
              padding-top 0px;
          }
 
+         .side-side {
+             background: red;
+             display: flex;
+             flex-direction: column;
 
+         }
 
+         .middle-img {
+             width: 90%;
+             padding-left: 5px;
+             padding-right: 5px;
+         }
 
-         
 
 
 }
