--- a/css/index.css
+++ b/css/index.css
@@ -308,7 +308,7 @@ a {
          }
 
          .header1 {
-             padding-top 0px;
+             padding-top: 0px;
          }
 
          .side-side {
