--- a/css/index.css
+++ b/css/index.css
@@ -259,6 +259,14 @@ a {
     
 
 @media (max-width:500px) {
+
+    @keyframes pulse {
+        0%   {background-color: red;}
+        25%  {background-color: yellow;}
+        50%  {background-color: blue;}
+        100% {background-color: green;}
+      }
+
     .container {
        width: 100%;
     }
@@ -297,6 +305,7 @@ a {
       
        
     }
+    
 
     .innovation {
         display: flex;
@@ -304,11 +313,20 @@ a {
         text-align: center;
         padding-left: 100px;
         padding-right: 100px;
+      
+    
+
         
          }
-
+         
+         #startbutton {
+            animation-name: pulse;
+            animation-duration: 10s;
+         }
          .header1 {
              padding-top: 0px;
+             
+          
          }
 
          .side-side {
@@ -322,10 +340,14 @@ a {
              padding-right: 5px;
          }
 
+        
+
 
 
 }
 
 
+  
+  
 
 
